# Aether

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.sh  format_check.sh
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
cmake/: gcc-m4f.cmake  gcc-m7f.cmake
common/: CMakeLists.txt
common/core/: CMakeLists.txt
common/drivers/: CMakeLists.txt
common/drivers/platform/stm32f7/: CMakeLists.txt
common/drivers/platform/stm32h7/: CMakeLists.txt
mcu_support/: CMakeLists.txt
mcu_support/stm32/f7xx/: CMakeLists.txt
mcu_support/stm32/f7xx/HAL/: CMakeLists.txt
mcu_support/stm32/f7xx/f745/: STM32F745VGTX_FLASH.ld
mcu_support/stm32/h7xx/: CMakeLists.txt
mcu_support/stm32/h7xx/HAL/: CMakeLists.txt
